wk_taa_taaqa/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AICPA</fullName>
                </value>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>BNA</fullName>
                </value>
                <value>
                    <fullName>Cambridge</fullName>
                </value>
                <value>
                    <fullName>Caseware</fullName>
                </value>
                <value>
                    <fullName>Cengage Learning</fullName>
                </value>
                <value>
                    <fullName>Corptax</fullName>
                </value>
                <value>
                    <fullName>Crosslink</fullName>
                </value>
                <value>
                    <fullName>Drake</fullName>
                </value>
                <value>
                    <fullName>Ichannel</fullName>
                </value>
                <value>
                    <fullName>Intuit - Lacerte</fullName>
                </value>
                <value>
                    <fullName>Intuit - Proseries</fullName>
                </value>
                <value>
                    <fullName>Intuit - Tax Online</fullName>
                </value>
                <value>
                    <fullName>McGraw-Hill</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pearson Educational (Formerly PH)</fullName>
                </value>
                <value>
                    <fullName>PFX Merger</fullName>
                </value>
                <value>
                    <fullName>SurePrep</fullName>
                </value>
                <value>
                    <fullName>TaxSlayer</fullName>
                </value>
                <value>
                    <fullName>Taxware</fullName>
                </value>
                <value>
                    <fullName>Thomson</fullName>
                </value>
                <value>
                    <fullName>Thomson - GoSystem</fullName>
                </value>
                <value>
                    <fullName>Thomson – Ultratax</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Vertex</fullName>
                </value>
                <value>
                    <fullName>Wiley Publishing</fullName>
                </value>
                <value>
                    <fullName>XCM Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connection_User__c</fullName>
        <formula>IF( $User.FirstName + $User.LastName = &quot;ConnectionUser&quot;,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connection User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Difference__c</fullName>
        <label>Converted $ Difference</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_in_Close_Month__c</fullName>
        <formula>MONTH(CloseDate) = MONTH(DATEVALUE(CreatedDate)) &amp;&amp; YEAR(CloseDate) = YEAR(DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created in Close Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Renewal_Contact__c</fullName>
        <formula>Account_X_Reference__r.AMS_renewal_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Renewal Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Renewal_Email__c</fullName>
        <formula>Account_X_Reference__r.AMS_Renewal_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Renewal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN_Not_On_Account__c</fullName>
        <description>Identifies if opportunity owner DTN is not in DTN Makeup field on the account</description>
        <formula>IF( NOT( Contains( Account.DTN_Makeup__c , Opportunity_Owner_DTN__c ) ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTN Not On Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Opportunity_Closed__c</fullName>
        <description>Populated via workflow and used in Age and Deal Velocity calculations. When Closed Won, stamped with Opportunity Close Date. When Closed Lost, stamped with current date.</description>
        <label>Date Opportunity Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <formula>IF( IsWon = TRUE,  Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Velocity_Type__c</fullName>
        <formula>IF(Opportunity_Age__c &gt; 0, 1, IF(Opportunity_Age__c = 0, 0, -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Velocity Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Velocity__c</fullName>
        <formula>IF ( IsWon = TRUE, Opportunity_Age__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Velocity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERP_Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ERP Account Number</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Account_X_Reference__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_X_Reference__c</referenceTo>
        <relationshipLabel>Opportunities (ERP Account Number)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Technology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Corporate Direct and Indirect Tax teams only.</inlineHelpText>
        <label>ERP Technology</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner Account</value>
            </filterItems>
            <filterItems>
                <field>Account.ERP_Vendor_Account_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ERP Vendor Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_Commerce_Technology__c</fullName>
        <inlineHelpText>Corporate Direct and Indirect Tax teams only</inlineHelpText>
        <label>E-Commerce Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3D Cart</fullName>
                </value>
                <value>
                    <fullName>American Eagle</fullName>
                </value>
                <value>
                    <fullName>Big Commerce</fullName>
                </value>
                <value>
                    <fullName>Demandware</fullName>
                </value>
                <value>
                    <fullName>Digital River</fullName>
                </value>
                <value>
                    <fullName>Elastic Path</fullName>
                </value>
                <value>
                    <fullName>IBM Websphere</fullName>
                </value>
                <value>
                    <fullName>Intershop</fullName>
                </value>
                <value>
                    <fullName>JDA</fullName>
                </value>
                <value>
                    <fullName>Magento Community</fullName>
                </value>
                <value>
                    <fullName>Magento Enterprise 1.X</fullName>
                </value>
                <value>
                    <fullName>Magento Enterprise 2.x</fullName>
                </value>
                <value>
                    <fullName>Mozu</fullName>
                </value>
                <value>
                    <fullName>MyCheck </fullName>
                </value>
                <value>
                    <fullName>NetSuite Suitecommerce</fullName>
                </value>
                <value>
                    <fullName>NetSuite Webstore</fullName>
                </value>
                <value>
                    <fullName>Novadine </fullName>
                </value>
                <value>
                    <fullName>Oracle ATG</fullName>
                </value>
                <value>
                    <fullName>RTR  </fullName>
                </value>
                <value>
                    <fullName>SAP Hybris</fullName>
                </value>
                <value>
                    <fullName>Shopify</fullName>
                </value>
                <value>
                    <fullName>Tillster</fullName>
                </value>
                <value>
                    <fullName>Volusion</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_book_Campaign_Owner__c</fullName>
        <description>Temporary field for R&amp;L e-book campaign</description>
        <label>E-book Campaign Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Opportunity__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Id +&quot;/e&quot;, &quot;Edit Opp&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Pre_sale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Authorization Campaign to identify if this is an account eligible to pre-buy.</description>
        <label>Eligible for Pre-sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Implementation_Date__c</fullName>
        <inlineHelpText>Estimated Implementation date for installation.</inlineHelpText>
        <label>Est. Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Help__c</fullName>
        <inlineHelpText>For Must Win deals, enter specific help that you need from sales leadership, business executives, product management, etc. to close this deal.</inlineHelpText>
        <label>Executive Help</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expansion_Call_Counter__c</fullName>
        <label>Expansion Call Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Page_Seen__c</fullName>
        <description>Used for Hubspot Intergration</description>
        <label>First Page Seen</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Forecast_Risk_Details__c</fullName>
        <inlineHelpText>If this deal is mark as a Forecast Risk, enter details about the risk and mitigation strategy/plan.</inlineHelpText>
        <label>Forecast Risk Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forecast_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Deal has been forecasted, but is as risk. Enter details in the Risk Details field.</inlineHelpText>
        <label>Forecast Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Type__c</fullName>
        <label>Forecast Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Low (&lt;50%)</fullName>
                    <color>#DDDDDD</color>
                </value>
                <value>
                    <fullName>Medium (50-90%)</fullName>
                    <color>#FF9900</color>
                </value>
                <value>
                    <fullName>High (&gt;90%)</fullName>
                    <color>#B6E32E</color>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <color>#419249</color>
                </value>
                <value>
                    <fullName>Omitted</fullName>
                    <color>#A53711</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Used for Hubspot Intergration</description>
        <formula>IF(CONTAINS(First_Page_Seen__c , &quot;?gclid=&quot;) ,
RIGHT( First_Page_Seen__c ,(LEN(First_Page_Seen__c )-FIND(&quot;?gclid=&quot;, First_Page_Seen__c ))-6)
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCLID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_fx__c</fullName>
        <label>National Order Global fx</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_ASR_Opportunity_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has ASR Opportunity Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Missing_Account_Details__c</fullName>
        <formula>Account.S2S_Account_Data__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Missing Account Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Missing_Contact_Details__c</fullName>
        <formula>Primary_Contact_for_Proposal__r.S2S_Contact_Data__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Missing Contact Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_TC_Opportunity_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has TC Opportunity Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Amount__c</fullName>
        <formula>IF( ISPICKVAL(ForecastCategoryName,&quot;High Probability&quot;),Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hosted_Option__c</fullName>
        <inlineHelpText>Used for Corp GI deals only. Must be populated before moving to Stage 3.</inlineHelpText>
        <label>Hosted Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dedicated</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Self Hosted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISC_Holdover__c</fullName>
        <description>Used to identify ISC holdovers in January 2017. Should be deleted after holdover period ends (1/30/17), or adjust name if it should be kept to monitor.</description>
        <formula>IF(Opportunity_Owner_DTN__c = Account.Inside_Sales__c,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISC Holdover?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_AMS_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is AMS Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Month_YTD__c</fullName>
        <formula>IF(MONTH(CloseDate) &lt; MONTH(TODAY()),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month YTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Rating__c</fullName>
        <label>Lead Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Associated__c</fullName>
        <formula>NOT(ISBLANK(Campaign.Id)) &amp;&amp; NOT(ISPICKVAL( Campaign.Type, &quot;Campaign List Pull&quot;)) &amp;&amp; NOT(ISPICKVAL( Campaign.Type, &quot;Webinar SD&quot;))&amp;&amp; NOT(ISPICKVAL( Campaign.Type, &quot;Prospect List-Sales&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Campaign Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medium_Amount__c</fullName>
        <formula>IF( ISPICKVAL(ForecastCategoryName,&quot;Medium Probability&quot;),Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>IF(Month( CloseDate) = 1, &quot;01-January&quot;, 
IF(Month( CloseDate) = 2, &quot;02-February&quot;, 
IF(Month( CloseDate) = 3, &quot;03-March&quot;, 
IF(Month( CloseDate) = 4, &quot;04-April&quot;, 
IF(Month( CloseDate) = 5, &quot;05-May&quot;, 
IF(Month( CloseDate) = 6, &quot;06-June&quot;, 
IF(Month( CloseDate) = 7, &quot;07-July&quot;, 
IF(Month( CloseDate) = 8, &quot;08-August&quot;, 
IF(Month( CloseDate) = 9, &quot;09-September&quot;, 
IF(Month( CloseDate) = 10, &quot;10-October&quot;, 
IF(Month( CloseDate) = 11, &quot;11-November&quot;, 
&quot;12-December&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_of_Quota__c</fullName>
        <formula>IF((MONTH( CloseDate ) + 12 - MONTH(  Owner.Start_Date__c  ) +
12 * (YEAR(CloseDate) - YEAR( Owner.Start_Date__c ) -1 ))-3 &lt; 0, 0,
IF(DAY( Owner.Start_Date__c )&lt;15,
(MONTH( CloseDate ) + 12 - MONTH(  Owner.Start_Date__c  ) +
12 * (YEAR(CloseDate) - YEAR( Owner.Start_Date__c ) -1 ))-2
,
(MONTH( CloseDate ) + 12 - MONTH(  Owner.Start_Date__c  ) +
12 * (YEAR(CloseDate) - YEAR( Owner.Start_Date__c ) -1 ))-3
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months of Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Must_Win_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Must Win Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Named_Account_Type__c</fullName>
        <formula>TEXT(Account.Named_Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Named Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Merger_Acquisition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Merger/Acquisition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Order_Ancillary_Products__c</fullName>
        <label>National Order Specialty Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCH AXCESS DOCUMENT</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS ENGAGEMENT</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS PORTAL</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS PRACTICE</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS WORKSTREAM</fullName>
                </value>
                <value>
                    <fullName>CCH KNOWLEDGECONNECT ON-PREMISE</fullName>
                </value>
                <value>
                    <fullName>CCH KNOWLEDGECONNECT SAAS</fullName>
                </value>
                <value>
                    <fullName>PFX ENGAGEMENT</fullName>
                </value>
                <value>
                    <fullName>PFX KNOWLEDGE TOOLS</fullName>
                </value>
                <value>
                    <fullName>PFX KNOWLEDGE COACH</fullName>
                </value>
                <value>
                    <fullName>FIXED ASSETS MANAGER ON-PREMISE</fullName>
                </value>
                <value>
                    <fullName>FIXED ASSETS MANAGER HOSTED</fullName>
                </value>
                <value>
                    <fullName>PFX FIXED ASSETS</fullName>
                </value>
                <value>
                    <fullName>PFX DOCUMENT ON-PREMISE</fullName>
                </value>
                <value>
                    <fullName>PFX PRACTICE</fullName>
                </value>
                <value>
                    <fullName>PFX PRACTICE MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>PFX SCAN</fullName>
                </value>
                <value>
                    <fullName>PFX PDFLYER STANDALONE</fullName>
                </value>
                <value>
                    <fullName>PFX SCAN SAAS</fullName>
                </value>
                <value>
                    <fullName>PROSYSTEM FX ACTIVEDATA</fullName>
                </value>
                <value>
                    <fullName>PFX TRIAL BALANCE</fullName>
                </value>
                <value>
                    <fullName>SDK INTEGRATION KIT</fullName>
                </value>
                <value>
                    <fullName>OUTSOURCE</fullName>
                </value>
                <value>
                    <fullName>SITE BUILDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Order_Axcess_Tax_Products__c</fullName>
        <label>National Order Axcess Tax Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCH AXCESS TAX INDIVIDUAL SYS 1040</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX PARTNERSHIP SYS 1065</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX CORPORATION SYS 1120</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX S CORPORATION SYS 1120S</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX CONS SYS 1120/1120S/1065</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX FIDUCIARY SYS 1041</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX EXEMPT ORG SYS 990</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX EMP BENEFIT PLAN SYS 5500</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX ESTATE &amp; GIFT 706/709</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX CORP POWER PACK</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX ALL STATES - INDIVIDUAL</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX ALL STATES - PARTNERSHIP</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX ALL STATES - CORPORATION</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX ALL STATES-S CORPORATION</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX ALL STATES - FIDUCIARY</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX ALL STATES - EXEMPT ORG</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX ALL STATES-ESTATE &amp; GIFT</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX DATASCAN</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX GL DIRECT (INCLUDES G/L BRIDGE)</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX PLANBUILDER</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX BATCH EXT AUTO-INDIVIDUAL</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX BATCH EXT AUTO-BUSINESS</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX BATCH EXT AUTO-SPECIALTY</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX PROJECTOR</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX-USERS</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX FID CLIENT ORGANIZER</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX NOTEBOOK/ORG</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX FEDERAL - IND ELF LTD</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX ALL STATES - IND ELF LTD</fullName>
                </value>
                <value>
                    <fullName>CCH AXCESS TAX FEDERAL - BUS ELF LTD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Order_Billing_Instructions__c</fullName>
        <label>National Order Billing Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>National_Order_Consolidated_Billing__c</fullName>
        <label>National Order Consolidated Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Order_ERP__c</fullName>
        <label>National Order ERP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Order_PFX_Tax_Products__c</fullName>
        <label>National Order PFX Tax Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIDUCIARY SYS 1041</fullName>
                </value>
                <value>
                    <fullName>EXEMPT ORG SYS 990</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE BENEFIT PLAN SYS 5500</fullName>
                </value>
                <value>
                    <fullName>ESTATE &amp; GIFT 706/709</fullName>
                </value>
                <value>
                    <fullName>ALL STATES - INDIVIDUAL</fullName>
                </value>
                <value>
                    <fullName>ALL STATES - PARTNERSHIP</fullName>
                </value>
                <value>
                    <fullName>ALL STATES - CORP</fullName>
                </value>
                <value>
                    <fullName>ALL STATES - S CORP</fullName>
                </value>
                <value>
                    <fullName>ALL STATES - FIDUCIARY</fullName>
                </value>
                <value>
                    <fullName>ALL STATES - EXEMPT ORG</fullName>
                </value>
                <value>
                    <fullName>ALL STATES - ESTATE &amp; GIFT</fullName>
                </value>
                <value>
                    <fullName>CLIENT MANAGER</fullName>
                </value>
                <value>
                    <fullName>DATASCAN PLUS</fullName>
                </value>
                <value>
                    <fullName>ENGAGEMENT PLUS</fullName>
                </value>
                <value>
                    <fullName>GL DIRECT (INCLUDES G/L BRIDGE)</fullName>
                </value>
                <value>
                    <fullName>PLANBUILDER</fullName>
                </value>
                <value>
                    <fullName>BATCH EXTENSIONS (AUTOMATIC)-INDIVIDUAL</fullName>
                </value>
                <value>
                    <fullName>BATCH EXTENSIONS (AUTOMATIC)-BUSINESS</fullName>
                </value>
                <value>
                    <fullName>BATCH EXTENSIONS (AUTOMATIC)-SPECIALTY</fullName>
                </value>
                <value>
                    <fullName>TAX PROJECTOR</fullName>
                </value>
                <value>
                    <fullName>NETWORK USERS</fullName>
                </value>
                <value>
                    <fullName>GFX ANNUAL USERS</fullName>
                </value>
                <value>
                    <fullName>OFF-SITE FEE</fullName>
                </value>
                <value>
                    <fullName>IND ORG/PRO FORMA PKG</fullName>
                </value>
                <value>
                    <fullName>FID ORG/PRO FORMA PKG</fullName>
                </value>
                <value>
                    <fullName>TAX NOTEBOOK/ORG/PF</fullName>
                </value>
                <value>
                    <fullName>PARTNERSHIP PRO FORMA</fullName>
                </value>
                <value>
                    <fullName>CORP PRO FORMA</fullName>
                </value>
                <value>
                    <fullName>S CORP PRO FORMA</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE BENEFIT PLAN PRO FORMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Order_Return_to_Rep_Instruction__c</fullName>
        <label>National Order Return to Rep Instruction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>